--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,10 +1,11 @@
 /* See the Tailwind configuration guide for advanced usage
    https://tailwindcss.com/docs/configuration */
-
 @import "tailwindcss" source(none);
+@source "../../deps/ash_authentication_phoenix";
 @source "../css";
 @source "../js";
 @source "../../lib/tunez_web";
+@source "../../deps/ash_authentication_phoenix";
 
 @plugin "@tailwindcss/forms";
 
